--- a/01_1_Airports_Analysis.ipynb
+++ b/01_1_Airports_Analysis.ipynb
@@ -159,7 +159,7 @@
    "source": [
     "### Correlations between numric features\n",
     "- Without normalization, the correlations between features range between 0.48 and 1. ->This is a big correlation\n",
-    "- Upon normalization with respect to the number of departing flights, the correlations decrease to -0.15 to 1 -> better"
+    "- After normalization with respect to the number of departing flights, the correlations decrease to -0.15 to 1 -> better"
    ]
   },
   {
