--- a/01_1_Airports_Analysis.ipynb
+++ b/01_1_Airports_Analysis.ipynb
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 427,
    "metadata": {
     "collapsed": false
    },
@@ -519,7 +519,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "table exists already, drop it first\n"
+      "pushing table\n",
+      "table pushed\n"
      ]
     }
    ],
@@ -529,6 +530,8 @@
     "df[numeric_features[1:]] = (df[numeric_features[1:]].T/df['DEP_FLIGHTS']).T\n",
     "airportClass = AirportClass(df)\n",
     "df = airportClass.data\n",
+    "df.index = df.IATA.values\n",
+    "df.drop('IATA',axis=1,inplace=True)\n",
     "\n",
     "if 'airports_clusters' in map(lambda x:x[0],conn.execute('select name from sqlite_master where type == \"table\"').fetchall()):\n",
     "    print \"table exists already, drop it first\"\n",
